Remove SessionPersistence class from todo.rb and place in separate file, session_persistence.rb and require_relative from todo.rb; copied session_persistence.rb to database_persistence.rb to start process of rewriting class to use PostgreSQL database instead of session

--- a/sinatra_todos/Gemfile
+++ b/sinatra_todos/Gemfile
@@ -1,12 +1,12 @@
 source "https://rubygems.org"
 
-ruby "2.5.1"
+ruby "2.5.3"
 
 gem "sinatra", "~>1.4.7"
 gem "sinatra-contrib"
 gem "erubis"
-gem "rack", ">= 1.6.12"
-gem "rack-protection", ">= 1.5.5"
+gem "pg"
+
 
 group :production do
   gem "puma", "4.3.5"
